Closed Bug 1345545 Opened 7 years ago Closed 7 years ago

SPS/PPS NAL not prepend to first frame.

Categories

(Core :: Audio/Video: Playback, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox52 --- unaffected
firefox-esr52 --- unaffected
firefox53 --- unaffected
firefox54 --- fixed
firefox55 --- fixed

People

(Reporter: jya, Assigned: jya)

References

Details

(Keywords: regression)

Attachments

(1 file)

The code is wrong.

Problem found by :jolin.

How did that ever worked ? :(
Comment on attachment 8844997 [details]
Bug 1345545: Prepend SPS/PPS on first frame.

https://reviewboard.mozilla.org/r/118248/#review120272
Attachment #8844997 - Flags: review?(jolin) → review+
Pushed by jyavenard@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/195711551a79
Prepend SPS/PPS on first frame. r=jolin
Keywords: regression
https://hg.mozilla.org/mozilla-central/rev/195711551a79
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Comment on attachment 8844997 [details]
Bug 1345545: Prepend SPS/PPS on first frame.

Approval Request Comment
[Feature/Bug causing the regression]: 1336431
[User impact if declined]: videos won't play or play corrupted (macro blocks, etc)
[Is this code covered by automated tests?]: yes
[Has the fix been verified in Nightly?]: manual check
[Needs manual test from QE? If yes, steps to reproduce]: STR provided in bug 1343847
[List of other uplifts needed for the feature/fix]: none
[Is the change risky?]: no
[Why is the change risky/not risky?]: only clear Boolean after being used, not before
[String changes made/needed]: none
Attachment #8844997 - Flags: approval-mozilla-aurora?
Hi Brindusa, could you help find someone to verify if this issue was fixed as expected on a latest Nightly build based on STR provided in bug 1343847? Thanks!
Flags: needinfo?(brindusa.tot)
Hi,

I tested this issue on Ubuntu 16.04, Mac OS X 10.11 and Windows 10 x64 using Nightly 54.0a1(2017-03-02)and latest Nightly 55.0a1 (2017-03-10) using the STR provided in bug 1343847 and could not reproduce it.

Blake, can you please verify if the issue is reproducible on the latest Nightly 55.0a1?
Flags: needinfo?(brindusa.tot) → needinfo?(bwu)
I don't see any marcoblocking with the latest nightly. But Youtube live stream seems not work well (only shows a couple of frames and stops). Not sure it is caused by this bug or not.
Flags: needinfo?(bwu) → needinfo?(jolin)
Bug 1336431 only ever got backed out from 52, so isn't 53 also needing an uplift request here?
(In reply to Ryan VanderMeulen [:RyanVM] from comment #10)
> Bug 1336431 only ever got backed out from 52, so isn't 53 also needing an
> uplift request here?

no.. this bug is a regression introduced by bug 1336431. it only ever made 54.
The stop is caused by patch part 5, which drains when stream ID change and later flushes if SPS change is seen. Unfortunately sometimes only stream ID changes. In this case decoder is drained and stops accepting input buffer, but no SPS change/flush to resume it.
Flags: needinfo?(jolin)
(In reply to John Lin [:jolin][:jhlin] from comment #12)
> The stop is caused by patch part 5, which drains when stream ID change and
> later flushes if SPS change is seen. Unfortunately sometimes only stream ID
> changes. In this case decoder is drained and stops accepting input buffer,
> but no SPS change/flush to resume it.

that can't be..

The MFR will always drain *and* flush when a stream ID is seen, regardless of the SPS changing or not.
Gerry, 
After discussing with jya and John via IRC, the patch did fix the macroblocking and has nothing to do with it. So it should be uplifted to aurora. 
Thanks.
Flags: needinfo?(gchang)
Comment on attachment 8844997 [details]
Bug 1345545: Prepend SPS/PPS on first frame.

Fix the macroblocking and was verified. Aurora54+.
Flags: needinfo?(gchang)
Attachment #8844997 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: