Bug 1345545: Prepend SPS/PPS on first frame. r=jolin a=gchang

MozReview-Commit-ID: 3UxVGjQcYtk